12186/bug/additional-facilities-spacing
Added extra spacing above amenities on hotel-info

--- a/src/targets/sandman/styles/components/amenities.less
+++ b/src/targets/sandman/styles/components/amenities.less
@@ -24,6 +24,10 @@ amenity-item,
   .hotel-info-amenities &{
     width: 50%;
     padding: 0 8px;
+    margin-top:10px;
+    &:first-child {
+      margin-top:0;
+    }
   }
 
   .viewport-mobile &{
